fix #1302 add tests